more stuff added...

--- a/hb_yaps/README.Rmd
+++ b/hb_yaps/README.Rmd
@@ -13,7 +13,6 @@ output: github_document
   
 
 ***
-Sorry for the upload to github being a bit late!  
 
 Please make sure that these packages are installed.
 
@@ -43,8 +42,23 @@ testYaps()
 
 If the last line returned a plot of a simple track with overlapping black and red lines, everything should be working.  
 
+***  
+The code for this part of the workshop is available in two formats - the code should be identical. All relevant files are found in the `rmds` folder. 
 
-You are also encouraged to take a look at the yaps readme: https://github.com/baktoft/yaps
+* ye good olde R-script
+  - `rmds/otn_part1_setupAndTest.R`
+  - `rmds/otn_part2_crayfish.R`
+  - `rmds/otn_part3_hald.R`
+* fancy-pants R-notebooks
+  - `rmds/otn_part1_setupAndTest.nb.html`
+  - `rmds/otn_part2_crayfish.nb.html`
+  - `rmds/otn_part3_hald.nb.html`
+
+
+***  
+
+
+You are encouraged to take a look at the yaps readme: https://github.com/baktoft/yaps
 
 
 If you can't get enough of YAPS have a look at the original paper:  
@@ -54,8 +68,9 @@ If you can't get enough of YAPS have a look at the original paper:
 And the recent pre-print including a step-by-step guide:
 [Opening the black box of fish tracking using acoustic telemetry](https://www.biorxiv.org/content/10.1101/2019.12.16.877688v1)  
 
-To keep updated, make sure to follow YAPS on [github](https://github.com/baktoft/yaps) and [researchgate](https://www.researchgate.net/project/YAPS-open-source-high-resolution-fish-tracking)
+To keep updated, make sure to follow YAPS on [github](https://github.com/baktoft/yaps) and [researchgate](https://www.researchgate.net/project/YAPS-open-source-high-resolution-fish-tracking)  
 
+## Sorry for the upload to github being a bit late!  
 
 
 
